gccida/c1/simplify_replace_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:719:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:723:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:730:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:732:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:735:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:747:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:751:30: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return simplify_gen_unary( ( rtx_code)v5, v6, v3, v18); 
                             ^~~~~~~~
                             rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:751:39: error: expected ')'
return simplify_gen_unary( ( rtx_code)v5, v6, v3, v18); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:751:26: note: to match this '('
return simplify_gen_unary( ( rtx_code)v5, v6, v3, v18); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:756:31: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return simplify_gen_binary( ( rtx_code)v5, v6, v7, v8); 
                              ^~~~~~~~
                              rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:756:40: error: expected ')'
return simplify_gen_binary( ( rtx_code)v5, v6, v7, v8); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:756:27: note: to match this '('
return simplify_gen_binary( ( rtx_code)v5, v6, v7, v8); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:760:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:768:32: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return simplify_gen_ternary( ( rtx_code)v5, v24, v11, v26, v13, v14); 
                               ^~~~~~~~
                               rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:768:41: error: expected ')'
return simplify_gen_ternary( ( rtx_code)v5, v24, v11, v26, v13, v14); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:768:28: note: to match this '('
return simplify_gen_ternary( ( rtx_code)v5, v24, v11, v26, v13, v14); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:817:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:829:35: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return simplify_gen_relational( ( rtx_code)v5, v25, v20, v21, v22); 
                                  ^~~~~~~~
                                  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:829:44: error: expected ')'
return simplify_gen_relational( ( rtx_code)v5, v25, v20, v21, v22); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:829:31: note: to match this '('
return simplify_gen_relational( ( rtx_code)v5, v25, v20, v21, v22); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/simplify-rtx.c:836:38: error: use of undeclared identifier 'machine_mode'
v3 = simplify_gen_subreg( v6, v15, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), *( _DWORD *)&x[1]); 
                                     ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_replace_rtx/src/obj/simplify-rtx.o] Error 1
